--- a/stylesheets/Bootstrap.custom.css
+++ b/stylesheets/Bootstrap.custom.css
@@ -1,16 +1,20 @@
 body{
-    width:1349px;
-    height:auto;
-    margin:auto;
     line-height:30pt;
 }
 div.maincontent{
-    width:100%;
+    margin: 0 auto;
+    max-width: 1920px;
 }
 a.navbar-brand:hover, a.tag:hover{
     text-decoration: underline;
 }
+
 /*header is here*/
+div.container, hr{
+    width: 100%;
+    margin-left: auto;
+    max-width: 1920px;
+}
 div.tag_float{
     float:right;
     margin-right:15%;
@@ -18,7 +22,7 @@ div.tag_float{
 div.tag_float li:hover{
     text-decoration: underline;
 }
-div.navbar-header{
+div.container > div.navbar-header{
     margin-left:15%;
     text-align: left;
 }
@@ -71,7 +75,12 @@ div.bg_part{
 a._logo{
     display: block;
 }
+div.endbar_outline{
+    border-top: 1px solid lightgrey;
+    background-color: #f8f8f8;
+}
 div.outer.endbar{
     margin-bottom: 3%;
 }
+
 
